fix word break on instance details card

--- a/src/DetailsView/reports/components/instance-details.scss
+++ b/src/DetailsView/reports/components/instance-details.scss
@@ -55,6 +55,7 @@
 table.report-instance-table {
     border-collapse: collapse;
     overflow-x: auto;
+    word-break: break-all;
 }
 
 @media screen and (max-width: 480px) {
